Fixed blockquote text alignment in blog indexes

--- a/_src/sass/base/_base.scss
+++ b/_src/sass/base/_base.scss
@@ -97,7 +97,7 @@ blockquote {
     color: $text-color-quote;
 
     p {
-        margin: 0
+        margin-top: 0
     }
 
     p + p {
