--- a/css/styles.css
+++ b/css/styles.css
@@ -483,7 +483,7 @@ blockquote {
     color: #b1784f;
 }
 blockquote p {
-    margin: 0;
+    margin-top: 0;
 }
 blockquote p + p {
     margin-top: 30px;
